# DZ_14_WEB

./: aidocs.py  alembic.ini  db.py  docker-compose.yml  docs.json  example.json  main.py  pyproject.toml  run_server.py  test.sqlite
docs/: Makefile  conf.py  index.rst
migrations/: env.py  script.py.mako
migrations/versions/: dcd743f50d75_init.py
source/: conf.py  index.rst
src/: main.py  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
